--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=24w46a
-yarn_mappings=24w46a+build.6
+minecraft_version=1.21.4-pre1
+yarn_mappings=1.21.4-pre1+build.4
 loader_version=0.16.9
 kotlin_loader_version=1.12.3+kotlin.2.0.21
 # Mod Properties
@@ -12,4 +12,4 @@ maven_group=grauly
 archives_base_name=Ritualis
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.109.0+1.21.4
+fabric_version=0.109.1+1.21.4
